// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventContainer component renders correctly with a text event 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 5,
        "marginBottom": 5,
        "marginHorizontal": 5,
        "overflow": "hidden",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingTop": 12,
        },
        false,
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
        }
      }
      style={
        Object {
          "height": 40,
          "width": 40,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "flexDirection": "column",
            "height": 43,
            "justifyContent": "space-between",
            "paddingLeft": 10,
            "width": 220,
          },
          false,
        ]
      }
    >
      <View
        style={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontSize": 14,
                "fontWeight": "600",
                "marginBottom": -2,
                "marginTop": -3,
              },
              Object {
                "color": undefined,
              },
            ]
          }
        >
          Test Name
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontSize": 10,
              },
              Object {
                "color": undefined,
              },
            ]
          }
        >
          @
          applicaster
        </Text>
      </View>
      <View
        style={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 12,
              },
              Object {
                "color": undefined,
              },
            ]
          }
        >
          August 4
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "position": "absolute",
          "right": 9,
          "top": 9,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "feed_rn_instagram_icon",
          }
        }
        style={
          Array [
            Object {
              "height": 30,
              "width": 30,
            },
            Object {
              "tintColor": undefined,
            },
          ]
        }
      />
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 14,
          "lineHeight": 18,
          "marginBottom": 5,
          "marginHorizontal": 12,
          "marginTop": 17,
        },
        Object {
          "color": undefined,
        },
      ]
    }
  >
    Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks 
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      @azpinstalls
    </Text>
     for the work, parts, advice and setup.

    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      #brz
    </Text>
     
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      #gt86
    </Text>
     
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      #ft86
    </Text>
    
  </Text>
  <ActionBar
    commentsCount={0}
    eventId="someId"
    eventOriginUrl={undefined}
    likesCount={30}
    retweetCount={undefined}
    socialNetwork="instagram"
    textToShare="Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86"
  />
</View>
`;

exports[`EventContainer component renders correctly with an image event 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 5,
        "marginBottom": 5,
        "marginHorizontal": 5,
        "overflow": "hidden",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
>
  <EventMedia
    eventId="someId"
    height={504}
    imageUrl="https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg"
    videoUrl={undefined}
    width={640}
  />
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "transparent",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 740,
          "zIndex": 2,
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
        }
      }
      style={
        Object {
          "height": 40,
          "width": 40,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "flexDirection": "column",
            "height": 43,
            "justifyContent": "space-between",
            "paddingLeft": 10,
            "width": 220,
          },
          false,
        ]
      }
    >
      <View
        style={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontSize": 14,
                "fontWeight": "600",
                "marginBottom": -2,
                "marginTop": -3,
              },
              Object {
                "color": undefined,
              },
            ]
          }
        >
          Test Name
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontSize": 10,
              },
              Object {
                "color": undefined,
              },
            ]
          }
        >
          @
          applicaster
        </Text>
      </View>
      <View
        style={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 12,
              },
              Object {
                "color": undefined,
              },
            ]
          }
        >
          August 4
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "position": "absolute",
          "right": 9,
          "top": 9,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "feed_rn_instagram_icon",
          }
        }
        style={
          Array [
            Object {
              "height": 30,
              "width": 30,
            },
            Object {
              "tintColor": undefined,
            },
          ]
        }
      />
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 14,
          "lineHeight": 18,
          "marginBottom": 5,
          "marginHorizontal": 12,
          "marginTop": 17,
        },
        Object {
          "color": undefined,
        },
      ]
    }
  >
    Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks 
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      @azpinstalls
    </Text>
     for the work, parts, advice and setup.

    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      #brz
    </Text>
     
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      #gt86
    </Text>
     
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      #ft86
    </Text>
    
  </Text>
  <ActionBar
    commentsCount={0}
    eventId="someId"
    eventOriginUrl={undefined}
    likesCount={30}
    retweetCount={undefined}
    socialNetwork="instagram"
    textToShare="Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86"
  />
</View>
`;
